UVs not unwrapping to 0-1 space in blender 2.8 when unselected in the Image Editor #57640

Closed
opened 2018-11-05 20:27:13 +01:00 by Vyacheslav · 12 comments

i see 2 error in uv.
1 if i select 1 face, this face big size in uv editor.
2 if i select all face and pressed unwrap uv , this no created uv.
1.png

2.png

i see 2 error in uv. 1 if i select 1 face, this face big size in uv editor. 2 if i select all face and pressed unwrap uv , this no created uv. ![1.png](https://archive.blender.org/developer/F5392832/1.png) ![2.png](https://archive.blender.org/developer/F5392830/2.png)
Author

Added subscriber: @Ghostil

Added subscriber: @Ghostil

#58043 was marked as duplicate of this issue

#58043 was marked as duplicate of this issue

#57906 was marked as duplicate of this issue

#57906 was marked as duplicate of this issue
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-11-06 11:30:12 +01:00
Member

To me it seems blender2.8 behaves a little differently from 2.79 in regards to selection:

All is fine if you have the Keep UV and edit mode mesh selection in syncoption ON.
If you have this ON you should have a UVs unwrapped and in 0-1 UV space.
(this was kind of reported before in #57060 -- and eventually closed but issue with selection persist actually, see the following)

Now to the difference (see attached file):
#57640.blend
In 2.8, it makes a difference which UVs you have selected in the UVEditor, in 2.79 this was not the case.
If you have a single UV selected (in UV editor), but select all faces in the 3D view and call unwrap from the 3D view then

  • 2.79 will unwrap all and put them in 0-1 space
  • 2.8 will unwrap all (but seperated in two islands), but only pack one part in 0-1 space the other is somewhere out of 0-1 space

I think this should not be intentional?
@ideasman42 : mind having a look?

To me it seems blender2.8 behaves a little differently from 2.79 in regards to selection: All is fine if you have the `Keep UV and edit mode mesh selection in sync`option ON. If you have this ON you should have a UVs unwrapped and in 0-1 UV space. (this was kind of reported before in #57060 -- and eventually closed but issue with selection persist actually, see the following) Now to the difference (see attached file): [#57640.blend](https://archive.blender.org/developer/F5406600/T57640.blend) In 2.8, it makes a difference which UVs you have selected in the UVEditor, in 2.79 this was not the case. If you have a single UV selected (in UV editor), but select all faces in the 3D view and call unwrap from the 3D view then - 2.79 will unwrap all and put them in 0-1 space - 2.8 will unwrap all (but seperated in two islands), but only pack one part in 0-1 space the other is somewhere out of 0-1 space I think this should not be intentional? @ideasman42 : mind having a look?
Author

In #57640#550319, @lichtwerk wrote:
To me it seems blender2.8 behaves a little differently from 2.79 in regards to selection:

All is fine if you have the Keep UV and edit mode mesh selection in syncoption ON.
If you have this ON you should have a UVs unwrapped and in 0-1 UV space.
(this was kind of reported before in #57060 -- and eventually closed but issue with selection persist actually, see the following)

Now to the difference (see attached file):
#57640.blend
In 2.8, it makes a difference which UVs you have selected in the UVEditor, in 2.79 this was not the case.
If you have a single UV selected (in UV editor), but select all faces in the 3D view and call unwrap from the 3D view then

  • 2.79 will unwrap all and put them in 0-1 space
  • 2.8 will unwrap all (but seperated in two islands), but only pack one part in 0-1 space the other is somewhere out of 0-1 space

I think this should not be intentional?
@ideasman42 : mind having a look?

Thank you very much for the explanation. This button is much better.
It is not enough now to copy, paste to work with uv.

> In #57640#550319, @lichtwerk wrote: > To me it seems blender2.8 behaves a little differently from 2.79 in regards to selection: > > All is fine if you have the `Keep UV and edit mode mesh selection in sync`option ON. > If you have this ON you should have a UVs unwrapped and in 0-1 UV space. > (this was kind of reported before in #57060 -- and eventually closed but issue with selection persist actually, see the following) > > Now to the difference (see attached file): > [#57640.blend](https://archive.blender.org/developer/F5406600/T57640.blend) > In 2.8, it makes a difference which UVs you have selected in the UVEditor, in 2.79 this was not the case. > If you have a single UV selected (in UV editor), but select all faces in the 3D view and call unwrap from the 3D view then > - 2.79 will unwrap all and put them in 0-1 space > - 2.8 will unwrap all (but seperated in two islands), but only pack one part in 0-1 space the other is somewhere out of 0-1 space > > I think this should not be intentional? > @ideasman42 : mind having a look? Thank you very much for the explanation. This button is much better. It is not enough now to copy, paste to work with uv.

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis
Member

Added subscriber: @Povert

Added subscriber: @Povert
Philipp Oeser changed title from Error in UV editor in blender 2.8 to UVs not unwrapping to 0-1 space in blender 2.8 when unselected in the Image Editor 2018-11-25 18:47:31 +01:00

Added subscriber: @rboxman

Added subscriber: @rboxman

This can be easily observed with the default cube.

Sync-off, simple 'U' unwrap with all edges as seams:
uv-bad.jpg

Sync-on, simple 'U' unwrap with all edges as seams:
uv-ok.jpg

This can be easily observed with the default cube. Sync-off, simple 'U' unwrap with all edges as seams: ![uv-bad.jpg](https://archive.blender.org/developer/F5828985/uv-bad.jpg) Sync-on, simple 'U' unwrap with all edges as seams: ![uv-ok.jpg](https://archive.blender.org/developer/F5828988/uv-ok.jpg)

This issue was referenced by 012a44cff1

This issue was referenced by 012a44cff11ffb12a65409ba68b4e66caded28a7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57640
No description provided.