Fix T57640: UV unwrap packing not working without sync selection.